complete index in page 209/210

--- a/index.tex
+++ b/index.tex
@@ -1381,7 +1381,7 @@ primary expressions 34
 
 \verb'printf' specifications, summary of 189
 
-\marginpar{208}
+\marginpar{209}
 
 \verb'printf' specifications, table of 57
 
@@ -1526,25 +1526,25 @@ program, \verb'sum3' 69
 
 
 
-program, suncomma 71
+program, \verb'suncomma' 71
 
-program, table 98
+program, \verb'table' 98
 
-program, table 1 196
+program, \verb'table1' 196
 
 program, test framework 159
 
-program, transpose 204
+program, \verb'transpose' 204
 
-program, tsort 172
+program, \verb'tsort' 172
 
-program, unbundle 82
+program, \verb'unbundle' 82
 
 program, word count 14, 119
 
-program, wordfreq 119
+program, \verb'wordfreq' 119
 
-program, xref 122
+program, \verb'xref' 122
 
 prompt character 2
 
@@ -1552,21 +1552,19 @@ prototyping iii, v, 78, 152, 185
 
 pseudo-code iv, 153
 
-ptx command 123
+\verb'ptx' command 123
 
 pushback, input 105, 110
 
-q query language 102. 107
+\textit{q} query language 102, 107
 
-qawk program 109
+\verb'qawk' program 109
 
-qawk query processor 108
+\verb'qawk' query processor 108
 
-qsort function 161
+\verb'qsort' function 161
 
-quadratic algorithm 157.162,
-
-183
+quadratic algorithm 157,162, 183
 
 query language 99
 
@@ -1580,31 +1578,27 @@ quicksort partitioning step 160
 
 quicksort performance 162
 
-quiz program 118
+\verb'quiz' program 118
 
-quotes, '' 2, 4-5. 65, 100
+quotes, \verb"' '" 2, 4-5, 65, 100
 
-quoting in regular expressions
+quoting in regular expressions 29-30, 41, 43
 
-29-30, 41. 43
+\verb'rand' function 40, 111
 
-rand function 40, HI
+\verb'rand', initializing 111
 
-rand, initializing 111 ,
+\verb'randint' function 111
 
-randint function 111
-
-randlet function 112
+\verb'randlet' function 112
 
 random sentences 113
 
-range pattern 32. 85. 187
+range pattern 32, 85, 187
 
-record separator, output 6. 55-56,
+record separator, output 6, 55-56, 83
 
-83
-
-record variable, $0 5, 35
+record variable, \verb'$0' 5, 35
 
 records, lines versus 21,60
 
@@ -1614,83 +1608,61 @@ records with headers 85
 
 recursion elimination 200, 204
 
-recursive function 54, 71. 76, 115,
+recursive function 54, 71, 76, 115, 160
 
-160
+recursive-descent parsing 145, 147-148
 
-recursive-descent parsing 145,
+redirection, \verb'>' output 56, 58, 188
 
-147-148
+redirection, \verb'>>' output 56, 58, 188
 
-redirection, > output 56, 58, 188
+redirection, \verb'|' output 58, 188
 
-redirection, >> output 56, 58, 188
+regular expression, \verb'.' 28
 
-redirection, ! output 58, 188
+regular expression, \verb'$' 28, 119
 
-regular expression, . 28
+regular expression, \verb'^' 28, 119
 
-regular expression, S 28, 119
+regular expression, \verb'()' 29
 
-regular expression, ' 28, 119
+regular expression, \verb'['...\verb']' 29
 
-regular expression, () 29
+regular expression, \verb'[^'...\verb']' 29
 
-regular expression, [...] 29
+regular expression, \verb'|' 29, 32
 
-regular expression, [*...] 29
+regular expression, \verb'*' 30
 
-regular expression, I 29. 32
+regular expression, \verb'+' 30
 
-regular expression, • 30
+regular expression, \verb'?' 30
 
-regular expression, + 30
+regular expression character class 29
 
-regular expression, ? 30
+regular expression, concatenation in 29
 
-regular expression character class
-
-29
-
-regular expression, concatenation
-
-in 29
-
-regular expression, dynamic 40,
-
-101. 184
+regular expression, dynamic 40, 101, 184
 
 regular expression examples 30
 
-regular expression field separator
+regular expression field separator 52, 60, 80, 135
 
-52. 60, 80. 135
-
-regular expression for 
-
-floatingpoint number 30, 40
+regular expression for floatingpoint number 30, 40
 
 
 
-regular expression metacharacters
+regular expression metacharacters 28, 191
 
-28, 191
-
-regular expression operators,
-
-precedence of 30
+regular expression operators, precedence of 30
 
 regular expressions in data 118
 
-regular expressions, quoting in
-
-29-30,41,43
+regular expressions, quoting in 29-30,41,43
 
 regular expressions, strings as 40
 
-regular expressions, summary of
-
-28, 191
+regular expressions, summary of 28, 191
 
 regular expressions, table of 32
 
@@ -1700,19 +1672,17 @@ relational databases iv, 102
 
 relational operators 25, 37
 
-relf ile database description
+\verb'relfile' database description 106
 
-106
-
-remainder operator, X 36,46
+remainder operator, \verb'%' 36,46
 
 report generation 89
 
-return statement 53
+\verb'return' statement 53
 
 reverse input line order 50
 
-reverse program 16-17
+\verb'reverse' program 16-17
 
 reverse-Polish notation 142
 
@@ -1720,25 +1690,23 @@ REXX language 186
 
 Ritchie, D. M. 66, 186
 
-RLEN6TH variable 35-36,41
+\verb'RLENGTH' variable 35-36,41
 
 rounding to nearest integer 40
 
-RS variable 36, 60, 83-84
+\verb'RS' variable 36, 60, 83-84
 
-RSTART variable 35-36,41.189
+\verb'RSTART' variable 35-36,41,189
 
-rtsort program 174
+\verb'rtsort' program 174
 
 rules for variable names 35
 
 running an awk program 3
 
-running time of awk programs
+running time of awk programs 183
 
-183
-
-scaffolding 153. 156, 179
+scaffolding 153, 156, 179
 
 scalar parameter 54
 
@@ -1748,73 +1716,63 @@ scientific notation 35
 
 Scribe formatter 124
 
-sed command v, 181, 184, 186
+\verb'sed' command v, 181, 184, 186
 
 self-identifying data 86
 
-semicolon 11. 22, 34, 47. 53. 187
+semicolon 11, 22, 34, 47, 53, 187
 
 semicolon as empty statement 50
 
-semicolon before else 47
+semicolon before \verb'else' 47
 
 sentence generation 114
 
 sentences, random 113
 
-sentgen program 115, 200-201
+\verb'sentgen' program 115, 200-201
 
 separator, blank line 83
 
 separator, default field 5, 24
 
-separator, input field 24, 35, 39,
+separator, input field 24, 35, 39, 60
 
-60
+separator, output field 6, 35, 39, 55-56
 
-separator, output Held 6, 35. 39,
+separator, output record 6, 55-56,  83
 
-55-56
-
-separator, output record 6, 55-56.
-
-83
-
-seq program 64
+\verb'seq' program 64
 
 Sethi, R. 130, 152, 186
 
-shell command interpreter 4, 65,
-
-99
+shell command interpreter 4, 65, 99
 
 side-effects of assignment 43
 
-side-effects of getline 61
+side-effects of \verb'getline' 61
 
-side-efTects of input 35
+side-effects of input 35
 
-side-effects of sub 43
+side-effects of \verb'sub' 43
 
 side-effects of test 52,192
 
-side-effects on SO 36, 43
+side-effects on \verb'$0' 36, 43
 
-side-effects on NF 36, 61
+side-effects on \verb'NF' 36, 61
 
-sin function 39
+\verb'sin' function 39
 
-SNOBOL4 language SO, 182, 186
+SNOBOL4 language 50, 182, 186
 
-sort command 8. 58, 84. 90
+\verb'sort' command 8, 58, 84, 90
 
-sort key 91. 127. 140
+sort key 91, 127, 140
 
-sort options 90, 94, 124. 126,
+\verb'sort' options 90, 94, 124, 126, 140
 
-140
-
-sort options, avoiding 91, 140
+\verb'sort' options, avoiding 91, 140
 
 
 \end{multicols}
