--- a/little_languages.tex
+++ b/little_languages.tex
@@ -267,10 +267,10 @@
 这种简易性对一些高级语言来说同样成立. 我们的下一个例子是 \texttt{graph} 
 的语言处理程序, \texttt{graph} 是一种用来画数据坐标图的原型语言. 输入
 是一张图的规范说明, 规范说明的每一行都表示一个数据点, 或坐标轴的标签
-信息. 数据点由一对 \textit{x}-\textit{y} 表示, 如果只有一个 \textit{y},
-则 \textit{x} 是从 1 开始的递增序列, 即 1, 2, 3, ..., 
-An optional nonnumeric plotting character can follow either form of data
-value\footnote{TODO}. 标签信息由一个关键词和多个参数值组成:
+信息. 数据点有两种表示形式: 一对 \textit{x}-\textit{y}, 或者只有一个
+\textit{y}, 此时默认 \textit{x} 是从 1 开始的递增序列, 即 1, 2, 3, 等等.
+两种形式中, 数据值的后面都可以跟随一个可选的非数字字符, 作为数据点的
+绘图字符 (默认是星号 \verb'*').  标签信息由一个关键词和多个参数值组成:
 \begin{pattern}
 \indent\texttt{label}\ \textit{caption} \par
 \indent\texttt{range}\ \textit{xmin}\ \textit{ymin}\ \textit{xmax}\
