complete index in page 210/210

--- a/index.tex
+++ b/index.tex
@@ -1775,5 +1775,369 @@ sort key 91, 127, 140
 \verb'sort' options, avoiding 91, 140
 
 
-\end{multicols}
+\marginpar{210}
+sort programs, testing 155
 
+sort test program, batch 155
+
+\verb'sortgen' language 140
+
+\verb'sortgen' program 140
+
+sorting address list 84
+
+sorting dates 72
+
+sorting, topological 170
+
+\verb'split' function 41,S2-S3, 76, 80, 84, 192
+
+\verb'sprintf' function 42, 76, 88, 189
+
+\verb'sqrt' function 39
+
+\verb'srand' function 40,111
+
+stack 142,200,204
+
+standard error file 59
+
+standard input file S9, 66
+
+standard input filename, \verb'-' 64, 116
+
+standard output file 5, 56
+
+statement, \verb'break' 49
+
+statement, \verb'close' 59, 82
+
+statement, \verb'continue' 49
+
+statement, \verb'delete' 52
+
+statement, \verb'do' 49
+
+statement, empty \verb'$0', 188
+
+statement, \verb'exit' 49
+
+statement, \verb'for' 16, 49
+
+statement, \verb'for' ... \verb'in' 51
+
+statement, \verb'if'-\verb'else' 14, 47
+
+statement, \verb'next' 49
+
+statement, pattern-action iii, 2, 21, 34, 53, 187
+
+statement, \verb'print' 5, 55
+
+statement, \verb'printf' 7, 24, 56, 98
+
+statement, \verb'return' 53
+
+statement, \verb'while' 15, 47
+
+statements, continuing long 15, 22, 188
+
+statements, summary of control-flow 48
+
+statements, summary of output 55
+
+status return 50, 64
+
+string, coercion to 4S
+
+string comparison 25-26, 44, 184
+
+string concatenation 13, 40, 43,  47, 56, 101, 182, 184
+
+string constant, \verb'"'...\verb'"' 7, 24, 35, 51
+
+string functions, summary of 190
+
+string functions, table of 42
+
+string, null 13, 24, 42, 114, 192
+
+string, numeric value of a 45
+
+string or number 44
+
+string to number coercion 25
+
+string to number conversion 35, 44, 192
+
+string variables 12,44
+
+string-matching pattern 26
+
+string-matching patterns, summary of 27
+
+strings as regular expressions 40
+
+\verb'sub' function 42, 182
+
+\verb'sub', side-effects of 43
+
+subscripts, array 50-52
+
+subscripts, numeric 52
+
+\verb'SUBSEP' variable 36, 53
+
+\verb'subset' function 109
+
+substitution, \verb'&' in 43, 72, 189
+
+\verb'substr' function 43, 72
+
+substring 24
+
+successor node 170
+
+successor-list data structure 171
+
+\verb'suffix' function 105
+
+
+
+
+
+
+
+\verb'sum1' program 68
+
+\verb'sum2' program 68
+
+\verb'sum3' program 69
+
+\verb'sumcomma' program 71
+
+summary of actions 34,188
+
+summary of arithmetic functions 190
+
+summary of control-flow statements 48
+
+summary of expressions 37
+
+summary of input-output 188
+
+summary of operators 190
+
+summary of output statements 55
+
+summary of patterns 23,187
+
+summary of \verb'printf'
+
+speciflcations 189
+
+summary of regular expressions 28, 191
+
+summary of string functions 190
+
+summary of string-matching patterns 27
+
+summing columns 67
+
+Swartwout, D. vi
+
+symbol table 131, 134, 152
+
+syntax error 4
+
+system function 59, 64
+
+tab character, \verb'\t' 15, 24, 31
+
+table, base 106
+
+table, database 103
+
+table, derived 106
+
+table formatting 95
+
+table of arithmetic functions 39
+
+table of arithmetic operators 46
+
+table of assembler instructions 132
+
+table of built-in variables 36
+
+table of comparison operators 25
+
+table of escape sequences 31
+
+table of \verb'getline' forms 62
+
+table of patterns 33
+
+table of performance
+
+measurements 183
+
+table of \verb'printf' examples 57
+
+table of \verb'printf' specifications 57
+
+table of regular expressions 32
+
+table of string functions 42
+
+\verb'table' program 98
+
+table, symbol 131,134,152
+
+\verb'table1' program 196
+
+\verb'tbl' command 95
+
+terminal symbol 113, 145
+
+test framework program 159
+
+test program, interactive 157
+
+test, side-effects of 52, 192
+
+testing, boundary condition 155
+
+testing, interactive 156
+
+testing sort programs 155
+
+TEX formatter 120,124
+
+text justification 98, 201
+
+timing tests 183
+
+Toolchest vi
+
+topological sort algorithm 171
+
+topological sorting 170
+
+\verb'tr' command 201
+
+translator model 131
+
+transpose program 204
+
+tree, binary 163
+
+Trickey, H. W. vi
+
+\verb'troff' command 120,124-125, 127, 139
+
+\verb'tsort' program 172
+
+
+
+
+
+Ullman, J. D. 110,152, 179
+
+\verb'unbundle' program 82
+
+underscore, 35
+
+\verb'unget' function 105
+
+uninitialized variables 51, 58
+
+universal relation 107
+
+update algorithm, \verb'make' 176
+
+updating, file 175
+
+user-defined functions 53, 182,  187
+
+value of a string, numeric 45
+
+value of comparison expression 37
+
+value of logical expression 37
+
+van Eick. P. vi
+
+VanWyk,C.J. vi
+
+variable, \verb'$0' record 5, 35
+
+variable, \verb'ARGC' 36, 63, 189
+
+variable, \verb'ARGV' 36, 63-65, 116, 189
+
+variable assignment, command line 63
+
+variable, \verb'FILENAME' 33, 35-36, 81, 103
+
+variable, \verb'FNR' 33, 35-36, 61
+
+variable, \verb'FS' 24, 35-36, 52, 60, 83, 135, 187
+
+variable names, rules for 35
+
+variable, \verb'NF' 6, 14, 35-36, 61
+
+variable, \verb'NR' 6, 12, 14, 35-36, 61
+
+variable, \verb'OFMT' 36, 45
+
+variable, \verb'OFS' 35-36, 43, 55-56
+
+variable, \verb'ORS' 36, 55-56, 83
+
+variable, \verb'RLENGTH' 35-36, 41
+
+variable, \verb'RS' 36, 60, 83-84
+
+variable, \verb'RSTART' 35-36, 41, 189
+
+variable, \verb'SUBSEP' 36, 53
+
+variables, field 35
+
+variables, global 54,116
+
+variables, local 54, 116, 182
+
+variables, numeric 44
+
+variables, string 12,44
+
+variables, table of built-in 36
+
+variables, uninitialized 51, 58
+
+\verb'wc' command 183
+
+\verb'while' statement 15,47
+
+\verb'who' command 62
+
+wild-card characters 26
+
+Williams, J. W. J. 162
+
+word count program 14, 119
+
+\verb'wordfreq' program 119
+
+words, convert numbers to 76
+
+\verb'xref' program 122
+
+\verb'yacc' parser generator 152,175
+
+Yannakakis, M. vi
+
+\end{multicols}
