review stop at page 179/210

--- a/experiments_with_algorithms.tex
+++ b/experiments_with_algorithms.tex
@@ -1465,7 +1465,7 @@ into a profile.\footnote{TODO}
 我们的快速排序, 堆排序和拓扑排序程序来自于 Jon Bentley, 他同时也是脚
 手架和剖析程序的灵感来源, 关于这些, 读者可以进一步阅读
 \textit{Communications of the ACM} 6 月和 7 月的 
-\textit{Programming Pearls} 专栏. 关于排序和搜索算法的扩展讨论和分析,
+\textit{Programming Pearls} 专栏. 关于排序和搜索算法的扩展讨论及分析,
 请阅读 \textit{The Art of Computer Programming} 第 3 卷: 搜索和排序
 (D. E. Knuth 著, Addison-Wesley 1973 年出版), 或者是 \textit{The Design and
 Analysis of Computer Algorithms} (Aho, Hopcroft 和 Ullman 著, 
@@ -1474,5 +1474,5 @@ Addison-Wesley 1974 年出版).
 Unix 程序 \texttt{make} 最早由 Stu Feldman 开发, 关于该程序的首篇文章
 载于 1979 年 4 月的 \textit{Software --- Practice and Experience}.
 更多的关于 \texttt{make} 的讨论, 请参考 W. Miller 和 E. Myers 撰写的
-``Side-effect in Automatic File Updating'', 载于 1986 年 9 月
-\textit{Software --- Practice and Experience}.
+``Side-effect in Automatic File Updating'', 载于 
+\textit{Software --- Practice and Experience}, 1986 年 9 月.
