--- a/preamble.tex
+++ b/preamble.tex
@@ -49,6 +49,7 @@
     margin=1cm,
     marginparsep = 0.5cm,
     marginparwidth=1cm,
+    top = 2.5cm,
     bottom = 2cm,
     outer = 2.5cm,
     inner = 2.5cm
