review stop at page 181/210

--- a/epilog.tex
+++ b/epilog.tex
@@ -33,9 +33,9 @@
     lines long, typed in and used immediately.}
     默认操作都是为了向这个方向努力, 具体来说, 使用空格
 作为默认的字段分隔符, 隐式地初始化, 变量的无类型声明, 等等, 这些设计
-选择都使得 单行程序变成可能. 作为作者, 我们非常清楚地知道 awk
-将会被如何地使用, 所以我们只写单行程序.\footnote{原文是 We, being the
-    authors, ``knew'' how the language was supposed to be used, and so we
-    only wrote one-liners.}
+选择都使得 单行程序变成可能. 作为作者, 我们非常清楚地 ``知道'' awk
+将会被如何地使用, 所以我们通常只需要写单行程序就够了.\footnote{原文是 We,
+    being the authors, ``knew'' how the language was supposed to be used,
+    and so we only wrote one-liners.}
 
 \marginpar{182}
