complete part of page 182/210

--- a/epilog.tex
+++ b/epilog.tex
@@ -37,3 +37,9 @@ and used immediately. 默认操作都是为了满足这个要求, 具体来说, 
 one-liners.}
 
 \marginpar{182}
+Awk 的快速传播强有力地推动了语言的发展. 把 awk 作为一门通用编程语言来使用,
+而且能够这么快速地流行起来, 我们都感到非常的惊喜, 当看到一个无法在
+一页内显示完毕的 awk 程序时, 我们的第一反应是震惊和惊异. 之所以会出现这种
+情况是因为许多人在使用计算机时, 仅限于 shell (命令行语言) 和 awk, 而不
+是使用一门 ``真正'' 的编程语言来开发程序 --- 他们经常过度伸展他们所喜爱
+的工具.
