注释掉无法显示的边注

--- a/index.tex
+++ b/index.tex
@@ -280,7 +280,7 @@
 \hangindent=4pc \hangafter=1 bell character, \verb'\007' 31
 
 \hangindent=4pc \hangafter=1 Bentley, J. L. vi, 130, 152, 179
-\hangindent=4pc \hangafter=1 \marginpar{206}
+% \hangindent=4pc \hangafter=1 \marginpar{206}
 
 \hangindent=4pc \hangafter=1 binary tree 163
 
@@ -648,7 +648,7 @@
 
 \hangindent=4pc \hangafter=1 field separator, output 6, 35, 39, 55-56
 
-\hangindent=4pc \hangafter=1 \marginpar{207}
+% \hangindent=4pc \hangafter=1 \marginpar{207}
 \hangindent=4pc \hangafter=1 field separator, regular expression 52, 60, 80, 135
 
 \hangindent=4pc \hangafter=1 field variables 35
@@ -1017,7 +1017,7 @@
 
 \hangindent=4pc \hangafter=1 leftmost longest match 42, 60, 80
 
-\hangindent=4pc \hangafter=1 \marginpar{208}
+% \hangindent=4pc \hangafter=1 \marginpar{208}
 \hangindent=4pc \hangafter=1 \verb'length' function 13-14
 
 \hangindent=4pc \hangafter=1 letters, form 100
@@ -1381,7 +1381,7 @@
 
 \hangindent=4pc \hangafter=1 \verb'printf' specifications, summary of 189
 
-\hangindent=4pc \hangafter=1 \marginpar{209}
+% \hangindent=4pc \hangafter=1 \marginpar{209}
 
 \hangindent=4pc \hangafter=1 \verb'printf' specifications, table of 57
 
@@ -1775,7 +1775,7 @@
 \hangindent=4pc \hangafter=1 \verb'sort' options, avoiding 91, 140
 
 
-\hangindent=4pc \hangafter=1 \marginpar{210}
+% \hangindent=4pc \hangafter=1 \marginpar{210}
 \hangindent=4pc \hangafter=1 sort programs, testing 155
 
 \hangindent=4pc \hangafter=1 sort test program, batch 155
