rewrite index in page 206/210

--- a/index.tex
+++ b/index.tex
@@ -292,7 +292,7 @@
 
 \hangindent=4pc \hangafter=1 boundary condition testing 155
 
-\hangindent=4pc \hangafter=1 braces, \verb'{'...\verb'}' 15, 22, 47, 167, 188
+\hangindent=4pc \hangafter=1 braces, \verb'{'...\verb')' 15,22,47, 167, 188
 
 \hangindent=4pc \hangafter=1 breadth-first order 163, 171
 
@@ -328,11 +328,11 @@
 
 \hangindent=4pc \hangafter=1 character class, regular expression 29
 
-\hangindent=4pc \hangafter=1 character, table of escape 31
+\hangindent=4pc \hangafter=1 characters, table of escape 31
 
 \hangindent=4pc \hangafter=1 \verb'check' function 155
 
-\hangindent=4pc \hangafter=1 check password file 78
+\hangindent=4pc \hangafter=1 check \verb'password' file 78
 
 \hangindent=4pc \hangafter=1 \verb'check1' program 87
 
@@ -342,7 +342,7 @@
 
 \hangindent=4pc \hangafter=1 \verb'checkgen' program 79
 
-\hangindent=4pc \hangafter=1 checking, corss-reference 73
+\hangindent=4pc \hangafter=1 checking, cross-reference 73
 
 \hangindent=4pc \hangafter=1 checks and deposits, add 87
 
@@ -382,15 +382,15 @@
 
 \hangindent=4pc \hangafter=1 command, \verb'date' 62, 76
 
-\hangindent=4pc \hangafter=1 command, \verb'egrep' 59, 181, 184, 186
+\hangindent=4pc \hangafter=1 command, \verb'egrep' 59, 181, 184,  186
 
 \hangindent=4pc \hangafter=1 command, \verb'grep' v, 181, 184
 
-\hangindent=4pc \hangafter=1 command interpreter, shell 4, 65, 99
+\hangindent=4pc \hangafter=1 command interpreter, shell 4, 65,  99
 
 \hangindent=4pc \hangafter=1 command, \verb'join' 104
 
-\hangindent=4pc \hangafter=1 command line, awk 1, 3, 63, 65, 187
+\hangindent=4pc \hangafter=1 command line, \verb'awk' 1, 3, 63, 65, 187
 
 \hangindent=4pc \hangafter=1 command, \verb'lorder' 170
 
@@ -416,6 +416,7 @@
 
 \hangindent=4pc \hangafter=1 command, \verb'wc' 183
 
+
 \hangindent=4pc \hangafter=1 command, \verb'who' 62
 
 \hangindent=4pc \hangafter=1 command-line arguments 63
@@ -432,7 +433,7 @@
 
 \hangindent=4pc \hangafter=1 comparison operator, \verb'>' 9
 
-\hangindent=4pc \hangafter=1 comparison operator, \verb'>'= 9
+\hangindent=4pc \hangafter=1 comparison operator, \verb'>=' 9
 
 \hangindent=4pc \hangafter=1 comparison operator, \verb'==' 9, 44
 
@@ -452,7 +453,7 @@
 
 \hangindent=4pc \hangafter=1 computation of base-10 logarithm 39
 
-\hangindent=4pc \hangafter=1 computation of \textit{e} 39
+\hangindent=4pc \hangafter=1 computation of $e$ 39
 
 \hangindent=4pc \hangafter=1 computation of $\pi$ 39
 
@@ -460,7 +461,7 @@
 
 \hangindent=4pc \hangafter=1 concatenation operator 40, 43, 182
 
-\hangindent=4pc \hangafter=1 concatenation, string 13, 40, 43, 47, 56, 101, 182, 184
+\hangindent=4pc \hangafter=1 concatenation, string 13,40,43, 47, 56, 101, 182, 184
 
 \hangindent=4pc \hangafter=1 conditional expression, \verb'?:' 37, 68
 
@@ -470,15 +471,15 @@
 
 \hangindent=4pc \hangafter=1 constraint graph 170
 
-\hangindent=4pc \hangafter=1 context-free grammar 113, 145, 148
+\hangindent=4pc \hangafter=1 context-free grammar 113,145, 148
 
 \hangindent=4pc \hangafter=1 continuation after , 22, 188
 
 \hangindent=4pc \hangafter=1 \verb'continue' statement 49
 
-\hangindent=4pc \hangafter=1 continuinglong statements 15, 22, 188
+\hangindent=4pc \hangafter=1 continuing long statements 15, 22, 188
 
-\hangindent=4pc \hangafter=1 control-break program 92, 95, 105, 110, 126
+\hangindent=4pc \hangafter=1 control-break program 92, 95, 105, 110,126
 
 \hangindent=4pc \hangafter=1 control-flow statements, summary of 48
 
@@ -502,7 +503,7 @@
 
 \hangindent=4pc \hangafter=1 cross-reference checking 73
 
-\hangindent=4pc \hangafter=1 cross-reference in manuscripts 120
+\hangindent=4pc \hangafter=1 cross-references in manuscripts 120
 
 \hangindent=4pc \hangafter=1 cycle, graph 171, 173-174, 177
 
@@ -522,7 +523,7 @@
 
 \hangindent=4pc \hangafter=1 database attribute 103
 
-\hangindent=4pc \hangafter=1 database description, \verb'relfile' 106
+\hangindent=4pc \hangafter=1 database description, \verb'relflle' 106
 
 \hangindent=4pc \hangafter=1 database, multifile 102
 
@@ -532,7 +533,8 @@
 
 \hangindent=4pc \hangafter=1 databases, relational iv, 102
 
-\hangindent=4pc \hangafter=1 \verb'date' command, 62, 76
+
+\hangindent=4pc \hangafter=1 \verb'date' command 62, 76
 
 \hangindent=4pc \hangafter=1 date conversion 72, 194
 
@@ -546,7 +548,7 @@
 
 \hangindent=4pc \hangafter=1 default field separator 5, 24
 
-\hangindent=4pc \hangafter=1 default initialization 12-13, 35, 38, 45, 50-51, 54, 68, 181
+\hangindent=4pc \hangafter=1 default initialization 12-13, 35, 38,45,50-51,54,68, 181
 
 \hangindent=4pc \hangafter=1 \verb'delete' statement 52
 
@@ -566,25 +568,25 @@
 
 \hangindent=4pc \hangafter=1 \verb'do' statement 49
 
-\hangindent=4pc \hangafter=1 dynamic regular expression 40, 101, 184
+\hangindent=4pc \hangafter=1 dynamic regular expression 40,  101, 184
 
-\hangindent=4pc \hangafter=1 \textit{e}, computation of 39
+\hangindent=4pc \hangafter=1 $e$, computation of 39
 
 \hangindent=4pc \hangafter=1 \verb'echo' program 63
 
-\hangindent=4pc \hangafter=1 \verb'egrep' command 59, 181, 184, 186
+\hangindent=4pc \hangafter=1 \verb'egrep' command 59,181,184, 186
 
 \hangindent=4pc \hangafter=1 \verb'else', semicolon before 47
 
 \hangindent=4pc \hangafter=1 \verb'emp.data' file 1
 
-\hangindent=4pc \hangafter=1 empty statement 50, 188
+\hangindent=4pc \hangafter=1 empty statement 50,188
 
 \hangindent=4pc \hangafter=1 \verb'END', multiple \verb'BEGIN' and 23, 169
 
 \hangindent=4pc \hangafter=1 end of input, \verb'$0' at 13
 
-\hangindent=4pc \hangafter=1 \verb'END' pattern 11, 23, 49
+\hangindent=4pc \hangafter=1 \verb'END' pattern 11,23,49
 
 \hangindent=4pc \hangafter=1 error file, standard 59
 
@@ -624,19 +626,19 @@
 
 \hangindent=4pc \hangafter=1 expression, value of logical 37
 
-\hangindent=4pc \hangafter=1 expression, field 36
+\hangindent=4pc \hangafter=1 expressions, field 36
 
-\hangindent=4pc \hangafter=1 expression, primary 34
+\hangindent=4pc \hangafter=1 expressions, primary 34
 
-\hangindent=4pc \hangafter=1 expression, summary of 37
+\hangindent=4pc \hangafter=1 expressions, summary of 37
 
-\hangindent=4pc \hangafter=1 Feldman, S. I. 179
+\hangindent=4pc \hangafter=1 Feldman,S. I. 179
 
 \hangindent=4pc \hangafter=1 field expressions 36
 
-\hangindent=4pc \hangafter=1 field, \verb'$'\textit{n} 5, 35
+\hangindent=4pc \hangafter=1 field, \verb'$'$n$ 5, 35
 
-\hangindent=4pc \hangafter=1 field, nonexistent 36, 45, 192
+\hangindent=4pc \hangafter=1 field, nonexistent 36,45, 192
 
 \hangindent=4pc \hangafter=1 \verb'field' program 66
 
