--- a/answers_to_selected_exercises.tex
+++ b/answers_to_selected_exercises.tex
@@ -24,7 +24,7 @@
 设置为 25, 如果最长的行不会超过上限, 那么下面的程序就不会对数据进行更改,
     否则的话, 就对每一行按照比例进行缩放, 使得最长的行不会超过 25 个星号.
 新数组 \texttt{y} 用来维护缩放后的长度, 这样的话, 数组 \texttt{x} 的元素
-的值仍然是有效的.
+仍然是有效的.
 \begin{awkcode}
         { x[int($1/10)]++ }
     END { max = MAXSTARS = 25
